[package]
name = "fraghash"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/fraghash"
build = "build.rs"

[[bin]]
name = "fraghash"
path = "main.rs"

[dependencies]
cshake = { git = "https://github.com/Berylsoft/keccak-state" }
foundations = { git = "https://github.com/Berylsoft/foundations", features = ["fs"] }
hex = "0.4"
itoa = "1"
